fixed layout issues

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ a {
   color: var(--white);
 }
 
+a:hover {
+    color: var(--cyan);
+}
+
 ul {
   display: flex;
   justify-content: space-between;
@@ -83,10 +87,11 @@ ul {
   font-weight: 600;
 }
 
+
 .card-container .nft-description {
   font-size: 1.15rem;
   font-weight: 300;
-  margin: 1       rem 0;
+  margin: 1rem 0;
 }
 
 .card-container .ntf-price-info p {
@@ -118,7 +123,7 @@ ul {
   width: auto;
   border-bottom: 0.0625rem solid var(--very-dark-blue-line);
 
-  margin-top: 1.3rem;
+  margin-top: 1.2rem;
 }
 
 /* Card body creator info starts */
